# LP1-2022.1-Autocomplete-and-Autocorrect

./: CMakeLists.txt  README.md
src/: main_ncurses.cpp
